--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "18.2.0",
+    "react-drag-drop-files": "^2.3.8",
+    "styled-components": "^5.3.6",
+    "uuid": "^9.0.0"
   }
 }
